objects/ESC_EPXDeclineCriteriaSelectorList__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Case_Field1__c</fullName>
        <label>Case Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field2__c</fullName>
        <label>Case Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field3__c</fullName>
        <label>Case Field3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EPx_Template_Selector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ESC_EPx_Template_Selector</label>
        <referenceTo>ESC_EPx_Template_Selector__c</referenceTo>
        <relationshipLabel>EPXDeclineCriteriaSelectorList</relationshipLabel>
        <relationshipName>EPXDeclineCriteriaSelectorList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_LKP__c</fullName>
        <formula>ESC_Profile_Name__c + ESC_Case_Field1__c + ESC_Case_Field2__c+ESC_Case_Field3__c+ESC_Case_Field4__c+ESC_Case_Field5__c</formula>
        <label>LKP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EPXDeclineCriteriaSelectorList</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ESC_Profile_Name__c</columns>
        <columns>ESC_Case_Field1__c</columns>
        <columns>ESC_Case_Field2__c</columns>
        <columns>ESC_Case_Field3__c</columns>
        <columns>ESC_Case_Field4__c</columns>
        <columns>ESC_Case_Field5__c</columns>
        <columns>ESC_LKP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EPXDCSL-{0000}</displayFormat>
        <label>EPxDeclineCriteriaSelectorList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EPXDeclineCriteriaSelectorList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>